--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -1,17 +1,17 @@
 ---
-export interface Props {
+export interface Properties {
 	title: string;
 }
 
-const { title } = Astro.props as Props;
+const { title } = Astro.props as Properties;
 ---
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+	<meta content="width=device-width" name="viewport">
+  <link type="image/x-icon" href="/favicon.ico" rel="icon" />
 	<title>{title}</title>
 </head>
 <body>
@@ -24,9 +24,8 @@ const { title } = Astro.props as Props;
     --font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
 		--font-size-lg: clamp(1.2rem, 0.7vw + 1.2rem, 1.5rem); 
     --font-size-xl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
-
-    --color-text: hsl(12, 5%, 4%);
-    --color-bg: hsl(10, 21%, 95%);
+    --color-text: hsl(12deg 5% 4%);
+    --color-bg: hsl(10deg 21% 95%);
   }
 
   html {
@@ -49,7 +48,7 @@ const { title } = Astro.props as Props;
   }
 
   :global(code) {
-    font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
+    font-family: Menlo, Monaco, "Lucida Console", "Liberation Mono", "DejaVu Sans Mono",
+			"Bitstream Vera Sans Mono", "Courier New", monospace;
   }
 </style>
