--- a/src/pages/profile.astro
+++ b/src/pages/profile.astro
@@ -21,5 +21,5 @@ const profileResult = await profileResponse.json();
 ---
 
 <MainLayout slug={routes.profile.path} description="Website" title="Profile">
-    <Profile profile={profileResult?.data?.user} userCount={userCount?.data?.count} slug={routes.profile.path} />
+    <Profile profile={profileResult?.data} userCount={userCount?.data} slug={routes.profile.path} />
 </MainLayout>
