--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -6,7 +6,7 @@ import { Login } from "@/widgets";
 
 ---
 
-<MainLayout slug={routes.login.path} description="Website" title="Login">
+<MainLayout description="Website" slug={routes.login.path} title="Login">
     <Login slug={routes.login.path} />
 </MainLayout>
 
