--- a/src/pages/profile/security.astro
+++ b/src/pages/profile/security.astro
@@ -1,13 +1,14 @@
 ---
 
 import MainLayout from "@/layouts/main-layout.astro";
-import { apiRoutes, routes } from "@/shared/routes";
 import { ACCESS_TOKEN_KEY } from "@/shared/api";
+import { apiRoutes, routes } from "@/shared/routes";
 import { Profile } from "@/widgets";
 
 const { API_URL } = import.meta.env; 
 
 const usersCountResponse = await fetch(`${API_URL}/${apiRoutes.userCount.path}`);
+const requestsCountResponse = await fetch(`${API_URL}/${apiRoutes.requestCount.path}`);
 
 const profileResponse = await fetch(`${API_URL}/${apiRoutes.getMe.path}`, {
     headers: {
@@ -16,11 +17,12 @@ const profileResponse = await fetch(`${API_URL}/${apiRoutes.getMe.path}`, {
 });
 
 const userCount = await usersCountResponse.json();
+const requestCount = await requestsCountResponse.json();
 const profileResult = await profileResponse.json();
 
 ---
 
-<MainLayout slug={routes.profile.path} description="Website" title="Profile">
-    <Profile slug={routes.profileSecurity.path} profile={profileResult?.data} userCount={userCount?.data} />
+<MainLayout description="Website" slug={routes.profileSecurity.path} title="Profile">
+    <Profile profile={profileResult?.data} requestCount={requestCount?.data} slug={routes.profileSecurity.path} userCount={userCount?.data} />
 </MainLayout>
 
